classDiagram
    %% Clase base abstracta para vehículos
    class Vehiculos {
        <<abstract>>
        -velocidad_viajes: int
        -identificador: str
        -registro_viajes: list
        -disponibilidad: str
        +__init__(velocidad_viajes, identificador)
        +despachar(distancia, nivel_trafico)* abstract
        +_despacho_default(distancia, nivel_trafico): float
        +__str__(): str
    }

    %% Clases de vehículos concretas
    class Auto {
        +__init__(velocidad_viajes, identificador)
        +despachar(distancia): float
    }

    class Avion {
        +__init__(velocidad_viajes, identificador)
        +despachar(distancia, nivel_trafico): float
    }

    class Helicoptero {
        +__init__(velocidad_viajes, identificador)
        +despachar(distancia, nivel_trafico): float
    }

    %% Clase base para pacientes
    class Pacientes {
        -nombre: str
        -DNI: int
        -sexo: str
        -nacimiento: datetime
        -Tsangre: str
        -telefono: int
        +__init__(nombre, DNI, sexo, nacimiento, Tsangre, telefono)
    }

    %% Clases derivadas de pacientes
    class Receptores {
        -organo_a_recibir: str
        -fecha_en_espera: datetime
        -prioridad: int
        -estado: str
        -organos_a_disposicion: list[Organos]
        -patologia: str
        -partido: str
        -provincia: str
        -centro_de_salud: CentroSalud
        +__init__(nombre, DNI, sexo, nacimiento, Tsangre, telefono, organo_a_recibir, fecha_en_espera, prioridad, patologia, estado)
    }

    class Donantes {
        -fhfallecimiento: datetime
        -organos_a_donar: list[Organos]
        -partido: str
        -provincia: str
        -centro_de_salud: CentroSalud
        +__init__(nombre, DNI, sexo, nacimiento, Tsangre, telefono, fhfallecimiento, organos_a_donar)
    }

    %% Clase de órganos
    class Organos {
        -tipo_de_organo: str
        -fecha_ablacion: datetime
        +__init__(tipo_de_organo)
    }

    %% Clase de cirujanos
    class Cirujanos {
        -especialidad: str
        -disponibilidad: str
        -ultima_cirugia: datetime
        -tiempo_recuperacion: int
        -tabla_sinergias: dict
        +__init__(especialidad)
        +verificar_disponibilidad(): bool
        +tiempo_restante_recuperacion(): float
        +realizar_cirujia(tiempo, receptor): bool
        +get_organos_compatibles(): list
        +__str__(): str
    }

    %% Clase centro de salud
    class CentroSalud {
        -nombre: str
        -direccion: str
        -telefono: str
        -partido: str
        -provincia: str
        -lista_cirujanos: list[Cirujanos]
        -lista_vehiculos: list[Vehiculos]
        -lista_pacientes: list[Pacientes]
        -pacientes_fallidos: list[Receptores]
        -pacientes_exitosos: list[Receptores]
        +__init__(nombre, direccion, telefono, partido, provincia, lista_cirujanos, lista_vehiculos, lista_pacientes)
        +asignar_pacientes(pacientes): void
        +asignar_y_mandar_vehiculo(receptor): float
        +obtener_cirujanos_disponibles(): list[Cirujanos]
        +obtener_mejor_cirujano_para_organo(organo_necesario): Cirujanos
        +mostrar_estado_cirujanos(): void
        +asignar_cirujano_y_operar(receptor, tiempo): void
        +__str__(): str
    }

    %% Clase principal INCUCAI
    class INCUCAI {
        -lista_receptores: list[Receptores]
        -lista_donantes: list[Donantes]
        -centros_salud: list[CentroSalud]
        +__init__(centros)
        +clasificar_centros_salud(): void
        +buscar_compatibilidad_receptor_a_donante(receptor): bool
        +buscar_compatibilidad_donante_a_receptor(donante): Receptores
    }

    %% Relaciones de herencia
    Vehiculos <|-- Auto
    Vehiculos <|-- Avion
    Vehiculos <|-- Helicoptero
    
    Pacientes <|-- Receptores
    Pacientes <|-- Donantes

    %% Relaciones de composición y agregación
    INCUCAI "1" *-- "1..*" CentroSalud : contiene
    INCUCAI "1" o-- "0..*" Receptores : gestiona
    INCUCAI "1" o-- "0..*" Donantes : gestiona
    
    CentroSalud "1" *-- "1..*" Cirujanos : tiene
    CentroSalud "1" *-- "1..*" Vehiculos : tiene
    CentroSalud "1" o-- "0..*" Pacientes : atiende
    CentroSalud "1" o-- "0..*" Receptores : registra exitosos/fallidos
    
    Receptores "1" o-- "0..*" Organos : puede recibir
    Donantes "1" *-- "1..*" Organos : dona
    
    Receptores "1" -- "0..1" CentroSalud : asignado a
    Donantes "1" -- "0..1" CentroSalud : asignado a
    
    Cirujanos "1" -- "0..*" Receptores : opera sobre